# free-category

./: .gitignore  .travis.yml  ChangeLog.md  README.md  bench-cats.hp  bench-cats.prof  cabal.project  default.nix  free-category.cabal  pkg.nix  release.nix  shell.nix
.circleci/: config.yml
.github/workflows/: cabal.project.local  ci.yaml  posix.yml
bench/: Main.hs  raport-O0.html  raport-O1.html  raport-O1.md  raport-O2.html  report-O0.md  report-O1.md  report-O2.md
examples/: README.md  examples.cabal  pkg.nix
examples/src/: LoginStateMachine.hs
nix/: free-algebras.nix  nixpkgs.nix  sources.json
src/Control/Arrow/: Free.hs
src/Control/Category/: Free.hs  FreeEff.hs  FreeEffect.hs  Lifting.hs
src/Control/Category/Free/: Internal.hs
test/: Main.hs
test/Test/: Cat.hs  Queue.hs
