name:           free-category
version:        0.0.1.0
synopsis:       Free category
description:    Free categories
category:       Algebra, Control, Monads, Category
homepage:       https://github.com/coot/free-category#readme
bug-reports:    https://github.com/coot/free-category/issues
author:         Marcin Szamotulski
maintainer:     profunctor@pm.me
copyright:      (c) 2018 Marcin Szamotulski
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/coot/free-category

library
  exposed-modules:
      Control.Arrow.Free
      Control.Category.Free
      Control.Category.Lifting
  other-modules:
      Paths_free_category
  hs-source-dirs:
      src
  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleInstances
      FlexibleContexts
      GADTs
      KindSignatures
      InstanceSigs
      MultiParamTypeClasses
      OverloadedStrings
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeFamilies
  build-depends:
      base          >= 4.9 && <5
    , free-algebras >= 0.0.7.0
  ghc-options:
    -Wall
    -fwarn-incomplete-record-updates
    -fwarn-incomplete-uni-patterns
    -fwarn-redundant-constraints
    -fwarn-deprecations
  default-language: Haskell2010
