name:           free-category
version:        0.0.4.0
synopsis:       Free category
description:    Free categories
category:       Algebra, Control, Monads, Category
homepage:       https://github.com/coot/free-category#readme
bug-reports:    https://github.com/coot/free-category/issues
author:         Marcin Szamotulski
maintainer:     profunctor@pm.me
copyright:      (c) 2018-2019 Marcin Szamotulski
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md
    bench/raport-O0.md
    bench/raport-O1.md
    bench/raport-O2.md
tested-with:    GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5

source-repository head
  type: git
  location: https://github.com/coot/free-category

library
  exposed-modules:
      Control.Arrow.Free
      Control.Category.Free
      Control.Category.Free.Internal
      Control.Category.FreeEff
  other-modules:
      Paths_free_category
  hs-source-dirs:
      src
  build-depends:
      base          >= 4.9 && <5
    , free-algebras >= 0.0.7.0
  ghc-options:
    -Wall
    -fwarn-incomplete-record-updates
    -fwarn-incomplete-uni-patterns
    -fwarn-redundant-constraints
    -fwarn-deprecations
  default-language: Haskell2010

test-suite test-cats
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  other-modules:
      Test.Cat
      Test.Queue
  default-language: Haskell2010
  build-depends:
      base
    , QuickCheck
    , tasty-quickcheck
    , tasty
    , free-algebras

    , free-category
  ghc-options:
    -Wall
    -fwarn-incomplete-record-updates
    -fwarn-incomplete-uni-patterns
    -fno-ignore-asserts
    -fwarn-deprecations
  default-language: Haskell2010

benchmark bench-cats
  hs-source-dirs:
      bench
  main-is:
      Main.hs
  type:
      exitcode-stdio-1.0
  build-depends:
      base
    , free-category
    , criterion
  ghc-options:
    -rtsopts
  default-language: Haskell2010
