cabal-version:       2.0
name:                examples
version:             0.1.0.0
synopsis: free-category examples
-- description:
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable login-state-machine
  main-is:           LoginStateMachine.hs
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <5
                     , free-category >= 0.0.1.0
                     , free-algebras >= 0.0.7.0
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall
                     -fwarn-incomplete-record-updates
                     -fwarn-incomplete-uni-patterns
                     -fwarn-redundant-constraints
                     -fwarn-deprecations
                     -main-is LoginStateMachine
